--- a/server_foodhub/services/AuthService/package.json
+++ b/server_foodhub/services/AuthService/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.7",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
