--- a/server_foodhub/services/AuthService/package.json
+++ b/server_foodhub/services/AuthService/package.json
@@ -7,21 +7,20 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha",
+    "test": "./node_modules/mocha/bin/mocha --exit",
     "start": "node server.js",
     "dev": "./node_modules/nodemon/bin/nodemon.js server.js"
   },
   "dependencies": {
     "bcrypt": "^3.0.7",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.17.1",
-    "server-destroy": "^1.0.1"
+    "mysql": "^2.17.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "mocha": "^6.2.2",
     "nodemon": "^2.0.2"
   }
