--- a/server_foodhub/services/UserService/package.json
+++ b/server_foodhub/services/UserService/package.json
@@ -11,6 +11,8 @@
     "dev": "./node_modules/nodemon/bin/nodemon.js server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1"
   },
