--- a/server_foodhub/services/UserService/package.json
+++ b/server_foodhub/services/UserService/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "test": "./node_modules/mocha/bin/mocha --exit",
     "start": "node server.js",
     "dev": "./node_modules/nodemon/bin/nodemon.js server.js"
   },
